# learn

./: .gitignore  0001-feature-add-.screenrc-for-screen.patch  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  check_safe.sh  jvm_metrics_config_demo
.claude/: CLAUDE.md
.claude/commands/: report-weekly.md
.coco/agents/: quarterly-reporter.md
.github/workflows/: syncToGitee.yaml
.lh/: .gitignore.json
0lib/: install_cpp_path.sh  readme.md
0lib/shell/: common.sh  test_check_and_append.sh  test_check_and_prepend.sh
0self_reflection/: 1plan  learn_ai_inference.md  reame.txt
1env_install/backup/: .bashrc  vimrc
1env_install/claude_code/: start.sh
1env_install/colab/: i3.ipynb  install2.ipynb  install_miniconda_to_colab.ipynb
1env_install/miniconda/: install_conda.ipynb  install_conda.sh
1env_install/new_mac/: .gitignore  .screenrc  bash_common  install_debian.sh  install_once.sh  (+2 more)
2code_snippet/: index.ipynb  readme.txt
TestJava/: .gitignore  pom.xml  readme.md
bigsun/: .gitignore  start.sh
dashboard_config/: jvm-dashboard.json
design_model/: producer_consumers.go  readme.md
dev_config/: .vimrc
ide_config/: .vimrc  .vimrc_link
ml_repo/: python.py
test_bash/: compact_pic_50.py  test_bash.sh
test_concurrent/: main  main.cpp
test_cpp/: .clang-format  .gitignore
test_cpp/code_snippet/: CMakeLists.txt  demo_automic  demo_automic.cpp  grun.sh  gtest_with_mock_and_real_obj.cpp  gtest_with_mock_and_real_obj.h  producer_consumer.cpp  run.sh  smartptr_demo.cpp  thread_pool.cpp
test_git/: README.md
test_go/: golang-design-pattern  main.go  readme.md
test_grpc/: readme.md
test_leetcode/: common.h  main.java
test_lua/: common.lua  common_test.lua  hello.lua
test_model/: consistent_hash.py
test_python/: bak.txt  readme.md
test_python/django_demo/mysite/polls/: admin.py  models.py  pyproject.toml  tests.py  urls.py  views.py  views_legacy.py
test_python/django_demo/mysite/polls/migrations/: 0001_initial.py
test_python/django_demo/mysite/polls/templates/polls/: detail.html  index.html
tmp_code/: main  so.cpp  solution2.cpp  solution3.cpp  solution4.cpp
tmp_cpp/: leetcode.h  leetcode_demo.cpp  s1.cpp  shared_ptr.cpp  so.cpp  so2.cpp  solution.cpp  solution1.cpp  test_torch.py  thread_pool.cpp  util.h
tool/: copy_file_to_target.py
(+681 files in other folders)
